calculo das frequencias de palavras

--- a/LDA Machado NLTK.ipynb
+++ b/LDA Machado NLTK.ipynb
@@ -100,7 +100,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
