--- a/LDA - Gensim.ipynb
+++ b/LDA - Gensim.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:019f4a3f5a7b9a5d29601c1630bec66df75cf64a977340ca5416946204e33305"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,14 +17,11 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "### Fun\u00e7\u00f5es Python para a an\u00e1lise."
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "### Fun\u00e7\u00f5es Python para a an\u00e1lise."
+     ]
     },
     {
      "cell_type": "code",
