--- a/LDA NLTK.ipynb
+++ b/LDA NLTK.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dae8d5d41ada37383340adda813c59852eee32b9ebb9e36d2c6e9d3c08508fde"
+  "signature": "sha256:7f433e104875c1d1fd9e69d28a5a658660f4818d5c4a1f00b9063f80873cc2b0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,6 +32,7 @@
       "from   Topics.visualization.wordcloud import make_wordcloud\n",
       "from IPython.display import display, Image\n",
       "import glob\n",
+      "from prettytable import PrettyTable\n",
       "\n",
       "\n",
       "import logging as log\n",
@@ -159,11 +160,13 @@
       "    f.close()\n",
       "    return txt\n",
       "\n",
-      "def documentos():\n",
-      "    arqvs = os.listdir(pasta+'/tokens')\n",
+      "def documentos(pasta, filtro=''):\n",
+      "    #arqvs = os.listdir(pasta+'/tokens')\n",
+      "    if filtro != '': filtro = '/' + filtro\n",
+      "    arqvs = glob.glob(pasta+'/tokens'+filtro)\n",
       "    docs = []\n",
       "    for arq in arqvs:\n",
-      "        f = open(pasta+'/tokens/'+arq)\n",
+      "        f = open(arq)\n",
       "        words = f.read().splitlines()\n",
       "        #words = ' '.join(words)\n",
       "        docs.append(words)\n",
@@ -194,13 +197,18 @@
       "    return vocab, olda._lambda\n",
       "\n",
       "\n",
-      "def lda_gensim(pasta, num_topics):\n",
-      "    texts = documentos()\n",
+      "def lda_gensim(pasta, num_topics,filtro=''):\n",
+      "    texts = documentos(pasta,filtro)\n",
       "    \n",
       "    dictionary = corpora.Dictionary(texts)\n",
+      "    #dictionary = corpora.Dictionary()\n",
+      "    \n",
       "    corpus = [dictionary.doc2bow(text) for text in texts]\n",
       "    \n",
-      "    lda = ldamodel.LdaModel(corpus, id2word=dictionary, num_topics=num_topics)\n",
+      "    lda = ldamodel.LdaModel([corpus[0]], id2word=dictionary, num_topics=num_topics )\n",
+      "    \n",
+      "    for i in range(1,len(corpus)):\n",
+      "        lda.update([corpus[i]])\n",
       "    \n",
       "    lda.save(pasta+'/lda')\n",
       "    dictionary.save(pasta+'/dic')\n",
@@ -299,14 +307,14 @@
       "#pre_processamento(pasta, corpus, stopwords,min_rep=min_rep)\n",
       "#registra_freq(pasta)\n",
       "#constroi_vocabulario(pasta)\n",
-      "dic,corpus, lda = lda_gensim(pasta, num_topics=num_topics)\n",
+      "dic,corpus, lda = lda_gensim(pasta, num_topics=num_topics,filtro='romanc*')\n",
       "#gera_wordclouds(lda, pasta=pasta,n_topics=lda.num_topics, n_words=num_words)\n",
       "topicos_txt(lda, pasta, n_topics=lda.num_topics, n_words=num_words)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 48
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -329,7 +337,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 49
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -352,7 +360,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 50
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -370,25 +378,65 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "lda.show_topics()"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 26,
+       "text": [
+        "['0.050*cabe\\xc3\\xa7a + 0.034*helena + 0.026*palavra + 0.025*gilliatt + 0.013*em\\xc3\\xadlia + 0.013*cec\\xc3\\xadlia + 0.010*costa + 0.009*lethierry + 0.008*leonor + 0.008*tito',\n",
+        " '0.038*casa + 0.033*tempo + 0.032*olhos + 0.031*homem + 0.029*coisa + 0.024*dois + 0.022*duas + 0.022*dizer + 0.022*havia + 0.021*todos',\n",
+        " '0.033*pedro + 0.028*mesma + 0.023*senhor + 0.020*oliver + 0.018*janela + 0.016*estela + 0.014*grande + 0.013*comigo + 0.012*muita + 0.012*digo',\n",
+        " '0.030*nome + 0.030*quatro + 0.024*gilliatt + 0.018*mesa + 0.017*pequeno + 0.015*rubi\\xc3\\xa3o + 0.015*valentim + 0.014*\\xc3\\xa1gua + 0.014*jos\\xc3\\xa9 + 0.013*elisa',\n",
+        " '0.019*\\xc3\\xa1gua + 0.018*gilliatt + 0.018*vento + 0.017*livro + 0.015*alves + 0.011*padre + 0.009*paulo + 0.008*navio + 0.008*flor + 0.008*cam\\xc3\\xb5es',\n",
+        " '0.068*senhora + 0.050*lu\\xc3\\xads + 0.034*carlota + 0.030*oliver + 0.030*senhor + 0.027*gente + 0.021*pessoa + 0.020*desde + 0.016*cabe\\xc3\\xa7a + 0.015*horas',\n",
+        " '0.031*judeu + 0.023*raz\\xc3\\xa3o + 0.022*jorge + 0.022*quer + 0.021*modo + 0.021*devia + 0.020*ponto + 0.020*nenhuma + 0.017*nenhum + 0.017*mundo',\n",
+        " '0.032*lado + 0.024*preciso + 0.023*sabe + 0.021*sala + 0.021*primeira + 0.019*terra + 0.019*lugar + 0.018*parte + 0.017*parece + 0.015*quero',\n",
+        " '0.046*bar\\xc3\\xa3o + 0.046*cena + 0.037*dumont + 0.032*joana + 0.027*mathilde + 0.026*alvarez + 0.023*rosinha + 0.021*durval + 0.019*tito + 0.018*larcey',\n",
+        " '0.013*respondeu + 0.011*parecia + 0.007*pobre + 0.007*continuou + 0.007*entrou + 0.007*ficou + 0.006*fazia + 0.006*queria + 0.006*crian\\xc3\\xa7a + 0.006*velha']"
+       ]
+      }
+     ],
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "glob.glob('./machado/tokens/roman*')"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 41
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "['./machado/tokens\\\\romance_marm01.txt',\n",
+        " './machado/tokens\\\\romance_marm02.txt',\n",
+        " './machado/tokens\\\\romance_marm03.txt',\n",
+        " './machado/tokens\\\\romance_marm04.txt',\n",
+        " './machado/tokens\\\\romance_marm05.txt',\n",
+        " './machado/tokens\\\\romance_marm06.txt',\n",
+        " './machado/tokens\\\\romance_marm07.txt',\n",
+        " './machado/tokens\\\\romance_marm08.txt',\n",
+        " './machado/tokens\\\\romance_marm09.txt',\n",
+        " './machado/tokens\\\\romance_marm10.txt']"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
